problems dependencies and modify detection api
