# dapia_detection_api/models/aircraft_types.py
@@ -1,0 +1,40 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from dapia_detection_api.models.base_model import Model
+from dapia_detection_api import util
+
+
+class AircraftTypes(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    """
+    allowed enum values
+    """
+    HELICOPTER = 'HELICOPTER'
+    PLANE = 'PLANE'
+    LIGHT = 'LIGHT'
+    def __init__(self):  # noqa: E501
+        """AircraftTypes - a model defined in OpenAPI
+
+        """
+        self.openapi_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AircraftTypes':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The aircraft_types of this AircraftTypes.  # noqa: E501
+        :rtype: AircraftTypes
+        """
+        return util.deserialize_model(dikt, cls)
