# dapia_detection_api/models/response200_classify_aircraft.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from dapia_detection_api.models.base_model import Model
+from dapia_detection_api.models.data import Data
+from dapia_detection_api import util
+
+from dapia_detection_api.models.data import Data  # noqa: E501
+
+class Response200ClassifyAircraft(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, data=None):  # noqa: E501
+        """Response200ClassifyAircraft - a model defined in OpenAPI
+
+        :param data: The data of this Response200ClassifyAircraft.  # noqa: E501
+        :type data: Data
+        """
+        self.openapi_types = {
+            'data': Data
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Response200ClassifyAircraft':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Response_200_Classify_Aircraft of this Response200ClassifyAircraft.  # noqa: E501
+        :rtype: Response200ClassifyAircraft
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> Data:
+        """Gets the data of this Response200ClassifyAircraft.
+
+
+        :return: The data of this Response200ClassifyAircraft.
+        :rtype: Data
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: Data):
+        """Sets the data of this Response200ClassifyAircraft.
+
+
+        :param data: The data of this Response200ClassifyAircraft.
+        :type data: Data
+        """
+
+        self._data = data
